# tia-reviewer

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy-backend.yml  unit-tests.yml
backend/: .gitignore  Dockerfile  pyproject.toml  query.py  server.py
backend/__tests__/: test_acceptance_query.py  test_unit_query.py
backend/src/: constants.py  datamodels.py  query.py  server.py
frontend/: jest.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/__e2e__/: fileupload.spec.ts
frontend/__tests__/: fileupload.test.tsx  maincomponent.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/app/api/presigned-url/: route.ts
frontend/app/api/signed-url/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/api/verification/: route.ts
frontend/app/components/: DataModels.ts  FileUpload.tsx  LoadingPage.tsx  MainComponent.tsx  ResultsPage.tsx
